--- a/Project2/test-output/old/Default suite/classes.html
+++ b/Project2/test-output/old/Default suite/classes.html
@@ -11,7 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testDriver</td>
+<td>testUserLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testAdminLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
