--- a/Project2/test-output/old/Default suite/methods-alphabetical.html
+++ b/Project2/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b9f197">  <td>18/08/15 15:25:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.testDriver()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@50b472aa]">testDriver</td> 
-  <td>main@1836463382</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:46</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;tabBarTests.afterTest()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:25</td>   <td>-21472</td> <td>&nbsp;</td><td title="&gt;&gt;tabBarTests.beforeTest()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:36</td>   <td>-10013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testBatchesTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testBatchesTab</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:39</td>   <td>-7657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testCurriculaTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testCurriculaTab</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:40</td>   <td>-6548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testLocationsTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testLocationsTab</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:40</td>   <td>-6361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testOverviewTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testOverviewTab</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:43</td>   <td>-3802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testReportsTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testReportsTab</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:43</td>   <td>-3516</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testSettingsTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testSettingsTab</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:40:46</td>   <td>-163</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testTrainersTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testTrainersTab</td> 
+  <td>main@2127036371</td>   <td></td> </tr>
 </table>
