--- a/Project2/test-output/emailable-report.html
+++ b/Project2/test-output/emailable-report.html
@@ -9,12 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num attn">2</td><td class="num">22,262</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num attn">2</td><td class="num">22,003</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">com.revature.testng.tabBarTests</td><td><a href="#m0">testReportsTab</a></td><td rowspan="1">1534531243028</td><td rowspan="1">282</td></tr><tr class="failedeven"><td><a href="#m1">testSettingsTab</a></td><td rowspan="1">1534531243314</td><td rowspan="1">3351</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.revature.testng.tabBarTests</td><td><a href="#m2">testBatchesTab</a></td><td rowspan="1">1534531236817</td><td rowspan="1">2352</td></tr><tr class="passedeven"><td><a href="#m3">testCurriculaTab</a></td><td rowspan="1">1534531239173</td><td rowspan="1">1107</td></tr><tr class="passedeven"><td><a href="#m4">testLocationsTab</a></td><td rowspan="1">1534531240282</td><td rowspan="1">185</td></tr><tr class="passedeven"><td><a href="#m5">testOverviewTab</a></td><td rowspan="1">1534531240469</td><td rowspan="1">2557</td></tr><tr class="passedeven"><td><a href="#m6">testTrainersTab</a></td><td rowspan="1">1534531246667</td><td rowspan="1">160</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">com.revature.testng.TabBarTests</td><td><a href="#m0">testReportsTab</a></td><td rowspan="1">1534532256014</td><td rowspan="1">440</td></tr><tr class="failedeven"><td><a href="#m1">testSettingsTab</a></td><td rowspan="1">1534532256460</td><td rowspan="1">3510</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.revature.testng.TabBarTests</td><td><a href="#m2">testBatchesTab</a></td><td rowspan="1">1534532250637</td><td rowspan="1">2131</td></tr><tr class="passedeven"><td><a href="#m3">testCurriculaTab</a></td><td rowspan="1">1534532252771</td><td rowspan="1">708</td></tr><tr class="passedeven"><td><a href="#m4">testLocationsTab</a></td><td rowspan="1">1534532253481</td><td rowspan="1">148</td></tr><tr class="passedeven"><td><a href="#m5">testOverviewTab</a></td><td rowspan="1">1534532253631</td><td rowspan="1">2379</td></tr><tr class="passedeven"><td><a href="#m6">testTrainersTab</a></td><td rowspan="1">1534532259973</td><td rowspan="1">313</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.revature.testng.tabBarTests#testReportsTab</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
-	at com.revature.testng.tabBarTests.testReportsTab(tabBarTests.java:107)
+<h2>Default test</h2><h3 id="m0">com.revature.testng.TabBarTests#testReportsTab</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
+	at com.revature.testng.TabBarTests.testReportsTab(TabBarTests.java:81)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -41,8 +41,8 @@
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.revature.testng.tabBarTests#testSettingsTab</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
-	at com.revature.testng.tabBarTests.testSettingsTab(tabBarTests.java:126)
+<h3 id="m1">com.revature.testng.TabBarTests#testSettingsTab</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError
+	at com.revature.testng.TabBarTests.testSettingsTab(TabBarTests.java:100)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -69,10 +69,10 @@
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
 </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.revature.testng.tabBarTests#testBatchesTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.revature.testng.tabBarTests#testCurriculaTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.revature.testng.tabBarTests#testLocationsTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.revature.testng.tabBarTests#testOverviewTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.revature.testng.tabBarTests#testTrainersTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.revature.testng.TabBarTests#testBatchesTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.revature.testng.TabBarTests#testCurriculaTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.revature.testng.TabBarTests#testLocationsTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.revature.testng.TabBarTests#testOverviewTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.revature.testng.TabBarTests#testTrainersTab</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
