--- a/Project2/test-output/index.html
+++ b/Project2/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\PanyardTS1\AppData\Local\Temp\testng-eclipse--283308095\testng-customsuite.xml</span>
+                    <span>C:\Users\PanyardTS1\AppData\Local\Temp\testng-eclipse-1989092241\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,12 +102,12 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.tabBarTests" hash-for-method="testReportsTab">testReportsTab</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.TabBarTests" hash-for-method="testReportsTab">testReportsTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.tabBarTests" hash-for-method="testSettingsTab">testSettingsTab</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.TabBarTests" hash-for-method="testSettingsTab">testSettingsTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -121,27 +121,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.tabBarTests" hash-for-method="testBatchesTab">testBatchesTab</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.TabBarTests" hash-for-method="testBatchesTab">testBatchesTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.tabBarTests" hash-for-method="testCurriculaTab">testCurriculaTab</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.TabBarTests" hash-for-method="testCurriculaTab">testCurriculaTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.tabBarTests" hash-for-method="testLocationsTab">testLocationsTab</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.TabBarTests" hash-for-method="testLocationsTab">testLocationsTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.tabBarTests" hash-for-method="testOverviewTab">testOverviewTab</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.TabBarTests" hash-for-method="testOverviewTab">testOverviewTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.tabBarTests" hash-for-method="testTrainersTab">testTrainersTab</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.revature.testng.TabBarTests" hash-for-method="testTrainersTab">testTrainersTab</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -159,7 +159,7 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">com.revature.testng.tabBarTests</span>
+              <span class="class-name">com.revature.testng.TabBarTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -168,7 +168,7 @@
                   </a> <!-- testReportsTab -->
                   <span class="method-name">testReportsTab</span>
                   <div class="stack-trace">java.lang.AssertionError
-	at com.revature.testng.tabBarTests.testReportsTab(tabBarTests.java:107)
+	at com.revature.testng.TabBarTests.testReportsTab(TabBarTests.java:81)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -204,7 +204,7 @@
                   </a> <!-- testSettingsTab -->
                   <span class="method-name">testSettingsTab</span>
                   <div class="stack-trace">java.lang.AssertionError
-	at com.revature.testng.tabBarTests.testSettingsTab(tabBarTests.java:126)
+	at com.revature.testng.TabBarTests.testSettingsTab(TabBarTests.java:100)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -239,7 +239,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.revature.testng.tabBarTests</span>
+              <span class="class-name">com.revature.testng.TabBarTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -282,7 +282,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PanyardTS1\AppData\Local\Temp\testng-eclipse--283308095\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PanyardTS1\AppData\Local\Temp\testng-eclipse-1989092241\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -291,7 +291,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.revature.testng.tabBarTests&quot;/&gt;
+      &lt;class name=&quot;com.revature.testng.TabBarTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -334,32 +334,32 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testSettingsTab')
-data.setCell(0, 2, 'com.revature.testng.tabBarTests')
-data.setCell(0, 3, 3351);
+data.setCell(0, 2, 'com.revature.testng.TabBarTests')
+data.setCell(0, 3, 3510);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testOverviewTab')
-data.setCell(1, 2, 'com.revature.testng.tabBarTests')
-data.setCell(1, 3, 2557);
+data.setCell(1, 2, 'com.revature.testng.TabBarTests')
+data.setCell(1, 3, 2379);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testBatchesTab')
-data.setCell(2, 2, 'com.revature.testng.tabBarTests')
-data.setCell(2, 3, 2352);
+data.setCell(2, 2, 'com.revature.testng.TabBarTests')
+data.setCell(2, 3, 2131);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testCurriculaTab')
-data.setCell(3, 2, 'com.revature.testng.tabBarTests')
-data.setCell(3, 3, 1107);
+data.setCell(3, 2, 'com.revature.testng.TabBarTests')
+data.setCell(3, 3, 708);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'testReportsTab')
-data.setCell(4, 2, 'com.revature.testng.tabBarTests')
-data.setCell(4, 3, 282);
+data.setCell(4, 2, 'com.revature.testng.TabBarTests')
+data.setCell(4, 3, 440);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'testLocationsTab')
-data.setCell(5, 2, 'com.revature.testng.tabBarTests')
-data.setCell(5, 3, 185);
+data.setCell(5, 1, 'testTrainersTab')
+data.setCell(5, 2, 'com.revature.testng.TabBarTests')
+data.setCell(5, 3, 313);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'testTrainersTab')
-data.setCell(6, 2, 'com.revature.testng.tabBarTests')
-data.setCell(6, 3, 160);
+data.setCell(6, 1, 'testLocationsTab')
+data.setCell(6, 2, 'com.revature.testng.TabBarTests')
+data.setCell(6, 3, 148);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -390,46 +390,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.revature.testng.tabBarTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.revature.testng.TabBarTests</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">beforeTest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">testBatchesTab</span>
-                <span class="method-start">11468 ms</span>
+                <span class="method-start">11555 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testCurriculaTab</span>
-                <span class="method-start">13824 ms</span>
+                <span class="method-start">13689 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testLocationsTab</span>
-                <span class="method-start">14933 ms</span>
+                <span class="method-start">14399 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testOverviewTab</span>
-                <span class="method-start">15120 ms</span>
+                <span class="method-start">14549 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">testReportsTab</span>
-                <span class="method-start">17679 ms</span>
+                <span class="method-start">16932 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">testSettingsTab</span>
-                <span class="method-start">17965 ms</span>
+                <span class="method-start">17378 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testTrainersTab</span>
-                <span class="method-start">21318 ms</span>
+                <span class="method-start">20891 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">21481 ms</span>
+                <span class="method-start">21207 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
