--- a/Project2/test-output/old/Default suite/methods.html
+++ b/Project2/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:25</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;tabBarTests.beforeTest()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2127036371</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:36</td>   <td>11459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testBatchesTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testBatchesTab</td> 
-  <td>main@2127036371</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:39</td>   <td>13815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testCurriculaTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testCurriculaTab</td> 
-  <td>main@2127036371</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:40</td>   <td>14924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testLocationsTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testLocationsTab</td> 
-  <td>main@2127036371</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:40</td>   <td>15111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testOverviewTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testOverviewTab</td> 
-  <td>main@2127036371</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:43</td>   <td>17670</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testReportsTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testReportsTab</td> 
-  <td>main@2127036371</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:43</td>   <td>17956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testSettingsTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testSettingsTab</td> 
-  <td>main@2127036371</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:46</td>   <td>21309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tabBarTests.testTrainersTab()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">testTrainersTab</td> 
-  <td>main@2127036371</td>   <td></td> </tr>
-<tr bgcolor="8a809c">  <td>18/08/17 14:40:46</td>   <td>21472</td> <td>&nbsp;</td><td title="&lt;&lt;tabBarTests.afterTest()[pri:0, instance:com.revature.testng.tabBarTests@68999068]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2127036371</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:19</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TabBarTests.beforeTest()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1287934450</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:30</td>   <td>11546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TabBarTests.testBatchesTab()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">testBatchesTab</td> 
+  <td>main@1287934450</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:32</td>   <td>13680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TabBarTests.testCurriculaTab()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">testCurriculaTab</td> 
+  <td>main@1287934450</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:33</td>   <td>14390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TabBarTests.testLocationsTab()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">testLocationsTab</td> 
+  <td>main@1287934450</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:33</td>   <td>14540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TabBarTests.testOverviewTab()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">testOverviewTab</td> 
+  <td>main@1287934450</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:36</td>   <td>16923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TabBarTests.testReportsTab()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">testReportsTab</td> 
+  <td>main@1287934450</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:36</td>   <td>17369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TabBarTests.testSettingsTab()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">testSettingsTab</td> 
+  <td>main@1287934450</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:39</td>   <td>20882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TabBarTests.testTrainersTab()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">testTrainersTab</td> 
+  <td>main@1287934450</td>   <td></td> </tr>
+<tr bgcolor="8a809c">  <td>18/08/17 14:57:40</td>   <td>21199</td> <td>&nbsp;</td><td title="&lt;&lt;TabBarTests.afterTest()[pri:0, instance:com.revature.testng.TabBarTests@647e447]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1287934450</td>   <td></td> </tr>
 </table>
