implementing new batch selenium tests, cucumber baseline functional

--- a/Project2/test-output/old/Default suite/classes.html
+++ b/Project2/test-output/old/Default suite/classes.html
@@ -11,6 +11,10 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>adminCreateNewBatch</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testUserLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
