--- a/Project2/test-output/old/Default suite/methods-not-run.html
+++ b/Project2/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,4 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.revature.testng.Assignforce_Testing_KW.testAdminLogin</td></tr>
+<tr><td>com.revature.testng.Assignforce_Testing_KW.testUserLogin</td></tr>
 </table>
