--- a/Project2/test-output/old/Default suite/methods.html
+++ b/Project2/test-output/old/Default suite/methods.html
@@ -1,8 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f99788">  <td>18/08/17 13:27:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.testAdminLogin()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6e171cd7]">testAdminLogin</td> 
-  <td>main@131635550</td>   <td></td> </tr>
-<tr bgcolor="f99788">  <td>18/08/17 13:27:27</td>   <td>17840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.testUserLogin()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6e171cd7]">testUserLogin</td> 
-  <td>main@131635550</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>18/08/17 16:23:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.adminCreateNewBatch()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@15ff3e9e]">adminCreateNewBatch</td> 
+  <td>main@1278677872</td>   <td></td> </tr>
 </table>
