--- a/Project2/test-output/old/Default suite/methods.html
+++ b/Project2/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f71a9">  <td>18/08/18 13:06:36</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Assignforce_Testing_KW.launchApplicationAsAdmin()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6356695f]">&gt;&gt;launchApplicationAsAdmin</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@310623126</td>   <td></td> </tr>
-<tr bgcolor="9f71a9">  <td>18/08/18 13:06:47</td>   <td>10855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.adminIterateThroughBatchCoreUntilMemoryFault()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6356695f]">adminIterateThroughBatchCoreUntilMemoryFault</td> 
-  <td>main@310623126</td>   <td></td> </tr>
-<tr bgcolor="9f71a9">  <td>18/08/18 13:07:11</td>   <td>34521</td> <td>&nbsp;</td><td title="&lt;&lt;Assignforce_Testing_KW.logoutAndCloseDriver()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@6356695f]">&lt;&lt;logoutAndCloseDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@310623126</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>18/08/18 23:58:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Assignforce_Testing_KW.launchApplicationAsAdmin()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@359f7cdf]">&gt;&gt;launchApplicationAsAdmin</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258931371</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>18/08/18 23:58:22</td>   <td>15016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.adminIterateThroughBuildling()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@359f7cdf]">adminIterateThroughBuildling</td> 
+  <td>main@258931371</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>18/08/18 23:58:43</td>   <td>35999</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Assignforce_Testing_KW.adminIterateThroughRoom()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@359f7cdf]">adminIterateThroughRoom</td> 
+  <td>main@258931371</td>   <td></td> </tr>
+<tr bgcolor="647d63">  <td>18/08/18 23:58:54</td>   <td>47412</td> <td>&nbsp;</td><td title="&lt;&lt;Assignforce_Testing_KW.logoutAndCloseDriver()[pri:0, instance:com.revature.testng.Assignforce_Testing_KW@359f7cdf]">&lt;&lt;logoutAndCloseDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258931371</td>   <td></td> </tr>
 </table>
